--- a/hourfront/package.json
+++ b/hourfront/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-table": "^6.10.0",
+    "react-toastify": "^5.3.2",
     "toastify": "^2.0.0"
   },
   "scripts": {
