--- a/volunteerhoursrecorder/src/main/resources/application.properties
+++ b/volunteerhoursrecorder/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.h2.consol.enabled=true;
 spring.h2.consol.path=/h2-console;
 spring.data.rest.basePath=/api
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC 
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
