--- a/volunteerhoursrecorder/src/main/resources/application.properties
+++ b/volunteerhoursrecorder/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.h2.consol.enabled=true;
 spring.h2.consol.path=/h2-console;
 spring.data.rest.basePath=/api
 ## Jackson Properties
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
-spring.jackson.time-zone= UTC 
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+#spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+#spring.jackson.time-zone= UTC 
+app.jwtSecret= SecretKey
+app.jwtExpirationInMs = 86400000
