--- a/hourfront/package.json
+++ b/hourfront/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.5",
     "react": "^16.9.0",
     "react-csv": "^1.1.1",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
     "react-table": "^6.10.0",
     "react-toastify": "^5.3.2",
